# bazel-go-example-code

./: BUILD.bazel  CREATE.adoc  TUTORIAL.md  WORKSPACE  deps.bzl  go.mod  main.go
cmd/: BUILD.bazel  roll.go  word.go
pkg/roll/: BUILD.bazel
pkg/word/: BUILD.bazel  generate_word.go
