load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/chrislovecnm/bazel-go-code-example
gazelle(name = "gazelle")

# adding rule to update deps
gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

go_library(
    name = "bazel-go-code-example_lib",
    srcs = ["main.go"],
    importpath = "github.com/chrislovecnm/bazel-go-code-example",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "bazel-go-code-example",
    embed = [":bazel-go-code-example_lib"],
    visibility = ["//visibility:public"],
)
